fix button text aligning

--- a/src/app/pages/loans/in-advance/sections/loans-list/loans-list.component.scss
+++ b/src/app/pages/loans/in-advance/sections/loans-list/loans-list.component.scss
@@ -14,6 +14,7 @@
       max-width: 100%;
       border: 0.1rem solid #e2e3e3;
       margin-top: 1.7rem;
+      text-align: center;
 
       .image-wrapper {
         padding: 1rem 0 1rem 1.3rem;
